# NuClaw

./: .gitignore  404.html  CMakeLists.txt  CODE_STRUCTURE_SPEC.md  CPP_OPTIMIZATION.md  DEPLOY.md  DESIGN_BACKGROUND_AGENT.md  DESIGN_STEP4_6.md  OUTLINE_V2.md  README.md  RESTRUCTURE_PLAN.md  REVIEW.md  build-docs.sh  code_review_step6_8.md  deploy.sh  index.html  mkdocs.yml  sitemap.xml  test_database.cpp  test_http_components.cpp
demos/: index.html
demos/architecture/: index.html
docs/: README.md  index.md  progressive_writing_plan.md  step00.md  step01.md  step02.md  step03.md  step04.md  step05.md
docs/demos/: README.md  architecture.md
docs/step00/: tutorial.md
docs/step01/: tutorial.md
docs/step02/: tutorial.md
docs/step03/: tutorial.md
docs/step04/: tutorial.md
docs/step05/: tutorial.md
docs/step06/: tutorial.md
docs/step07/: tutorial.md
docs/step08/: tutorial.md
docs/step09/: tutorial.md
docs/step10/: tutorial.md
docs/step11/: tutorial.md
docs/step12/: tutorial.md
docs/step13/: tutorial.md
docs/step14/: tutorial.md
docs/step15/: tutorial.md
docs/step16/: tutorial.md
docs/step17/: quickstart.md  tutorial.md
docs/step18/: quickstart.md  tutorial.md
docs/step19/: quickstart.md  tutorial.md
docs/step20/: tutorial.md
docs/step21/: tutorial.md
docs/stylesheets/: extra.css
examples/: test_step00.sh  test_step01.sh
nuclaw/: CMakeLists.txt  README.md
nuclaw/configs/: config.yaml
nuclaw/src/: main.cpp
nuclaw/tests/: CMakeLists.txt  test_main.cpp  test_tool_registry.cpp
progressive_writing_plan/: index.html
search/: search_index.json
src/: step06_rest_demo.cpp  step07_llm_demo.cpp  step08_db_demo.cpp  step10_test_demo.cpp
src/demos/: step07_llm_demo.cpp
src/step00/: CMakeLists.txt  main.cpp
src/step01/: CMakeLists.txt  main.cpp
src/step02/: CMakeLists.txt  main.cpp
src/step03/: CMakeLists.txt  agent_loop.cpp  agent_loop.hpp  main.cpp  server.cpp  server.hpp  ws_session.cpp  ws_session.hpp
src/step04/: CMakeLists.txt  main.cpp
src/step05/: CMakeLists.txt  main.cpp
src/step06/: CMakeLists.rest.txt  CMakeLists.txt  agent_loop.cpp  agent_loop.hpp  calculator.hpp  chat_engine.hpp  file_tool.hpp  llm_client.hpp  main.cpp  registry.cpp  registry.hpp  server.cpp  server.hpp  step06_rest_demo.cpp  system_tool.hpp  test_database.cpp  test_http_components.cpp  time_tool.hpp  tool.cpp  tool.hpp  tool_executor.hpp  tool_registry.cpp  tool_registry.hpp  tools.cpp  tools.hpp  ws_session.cpp  ws_session.hpp
src/step07/: CMakeLists.txt  calc_tool.hpp  chat_engine.hpp  main.cpp  tool_executor.hpp
src/step08/: CMakeLists.txt  code_tool.hpp  file_tool.hpp  http_tool.hpp  llm_client.hpp  main.cpp  registry.hpp  sandbox.hpp  server.cpp  server.hpp  step08_db_demo.cpp  time_tool.hpp  tool.hpp  tool_executor.hpp  weather_tool.hpp
src/step09/: CMakeLists.txt  main.cpp  tool.hpp  tool_executor.hpp  weather_tool.hpp
src/step10/: CMakeLists.txt  document_processor.hpp  embedding_client.hpp  main.cpp  step10_test_demo.cpp
src/step11/: CMakeLists.txt  main.cpp
src/step12/: CMakeLists.txt  main.cpp
src/step12/include/nuclaw/: chat_engine.hpp  tool.hpp
src/step13/: config.hpp
src/step14/: CMakeLists.txt  main.cpp
src/step14/include/nuclaw/: coordinator.hpp  embedding_client.hpp  http_tool.hpp
src/step15/: README.md
src/step16/: CMakeLists.txt  README.md  step16_demo
src/step17/: CMakeLists.txt  README.md  step17_demo  travelpal
src/step17/include/nuclaw/: agent_state.hpp  feishu_adapter.hpp  time_tool.hpp  tool_executor.hpp  transport_agent.hpp  weather_tool.hpp
src/step17/include/smartsupport/common/: database.hpp
src/step17/include/travelpal/: travel_profile.hpp
src/step17/src/: main.cpp
src/step17/src/common/: utils.cpp
src/step17/src/services/ai/: service.cpp
src/step18/: CMakeLists.txt  README.md  step18_demo
src/step18/include/: step18_progressive.hpp
src/step18/include/nuclaw/: agent.hpp  code_tool.hpp  document_processor.hpp  logger.hpp  relationship.hpp  stateful_agent.hpp  vector_store.hpp
src/step18/include/smartsupport/common/: types.hpp
src/step18/include/smartsupport/services/ai/: service.hpp
src/step18/include/smartsupport/services/chat/: session.hpp
src/step18/include/smartsupport/services/knowledge/: service.hpp
src/step18/include/starcafe/: simple_npc.hpp
src/step18/k8s/: deployment.yaml
src/step18/src/: main.cpp
src/step18/src/services/chat/: session.cpp
src/step19/: CMakeLists.txt  README.md  step19_demo
src/step19/include/: step19_progressive.hpp
src/step19/include/nuclaw/: calc_tool.hpp  dingtalk_adapter.hpp  tool_registry.hpp
src/step19/include/nuclaw/services/: knowledge_service.hpp
src/step19/include/saas/: simple_tenant.hpp
src/step19/k8s/: secret.yaml
src/step19/src/: main.cpp
src/step19/src/services/chat/: service.cpp
src/step20/: CMakeLists.txt  Dockerfile  docker-compose.yml  test.cpp
src/step20/include/: step17_progressive.hpp
src/step20/include/nuclaw/: vector_store.hpp
src/step20/include/nuclaw/services/: tenant_service.hpp
src/step20/k8s/: 01-namespace.yaml  02-configmap.yaml  03-postgres.yaml  04-redis.yaml  05-chat-service.yaml  06-ai-service.yaml  10-ingress.yaml
src/step20/src/: main.cpp
src/step20/src/common/: database.cpp
src/step21/: README.md  step16_demo
step00/tutorial/: index.html
step01/tutorial/: index.html
step02/tutorial/: index.html
step03/tutorial/: index.html
step04/tutorial/: index.html
step05/tutorial/: index.html
step06/tutorial/: index.html
step07/tutorial/: index.html
step08/tutorial/: index.html
step09/tutorial/: index.html
step10/tutorial/: index.html
step11/tutorial/: index.html
step12/tutorial/: index.html
step13/tutorial/: index.html
step14/tutorial/: index.html
step15/tutorial/: index.html
step16/tutorial/: index.html
step17/quickstart/: index.html
step17/tutorial/: index.html
step18/quickstart/: index.html
step18/tutorial/: index.html
step19/quickstart/: index.html
step19/tutorial/: index.html
step20/tutorial/: index.html
(+69 files in other folders)
